# src/main/java/capgemini/challenge/api/controller/UserStoryController.java
@@ -5,6 +5,7 @@ import capgemini.api.openapi.dto.UserStory;
 import capgemini.api.openapi.dto.UserStoryStatusEnum;
 import capgemini.challenge.api.service.interfaces.IUserStoryService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -27,6 +28,11 @@ public class UserStoryController implements UserStoryApi {
     }
 
     @Override
+    public ResponseEntity<UserStory> addUserStory(UserStory userStory) {
+        return new ResponseEntity(this.userStoryService.addUserStory(userStory), HttpStatus.CREATED);
+    }
+
+    @Override
     public ResponseEntity<UserStory> getUserStory(Long userStoryId) {
         UserStory userStory = this.userStoryService.getUserStoryById(userStoryId);
 
@@ -46,5 +52,14 @@ public class UserStoryController implements UserStoryApi {
         }
 
         return ResponseEntity.ok(this.userStoryService.patchUserStoryStatus(userStory, userStoryStatusEnum.getStatus().getValue()));
+    }
+
+    @Override
+    public ResponseEntity<UserStory> updateUserStory(Long userStoryId, UserStory userStory) {
+        if(Objects.isNull(this.userStoryService.getUserStoryById(userStoryId))){
+            return ResponseEntity.notFound().build();
+        }
+
+        return ResponseEntity.ok(this.userStoryService.updateUserStory(userStory));
     }
 }
