# src/main/java/capgemini/challenge/api/service/interfaces/IUserStoryService.java
@@ -2,6 +2,7 @@ package capgemini.challenge.api.service.interfaces;
 
 import capgemini.api.openapi.dto.UserStory;
 
+import java.net.URI;
 import java.util.List;
 
 public interface IUserStoryService {
@@ -10,4 +11,8 @@ public interface IUserStoryService {
     UserStory getUserStoryById(Long userStoryId);
 
     UserStory patchUserStoryStatus(UserStory userStory, String status);
+
+    UserStory addUserStory(UserStory userStory);
+
+    UserStory updateUserStory(UserStory userStory);
 }
